Call WebStateObserver::FaviconUrlUpdated for same-document navigations.

WebStateImpl will cache favicon urls in OnFaviconUrlUpdated and will
call WebStateObserver::FaviconUrlUpdated in OnNavigationFinished for
same document navigations.

Also removed favicon urls caching in WebFaviconDriver introduced in
crrev.com/c/695761. This CL is not exactly a revert of
crrev.com/c/695761, because deprecated NavigationItemCommitted is
replaced with DidFinishNavigation. NavigationItemCommitted is not
called for push/replace state same-document navigaiton, which may
cause other bugs for favicons caching.


Bug: 789581
Cq-Include-Trybots: master.tryserver.chromium.mac:ios-simulator-cronet;master.tryserver.chromium.mac:ios-simulator-full-configs
Change-Id: I42922ab4d7812380787e350713640efe4d599680
Reviewed-on: https://chromium-review.googlesource.com/797072
Reviewed-by: Sylvain Defresne <sdefresne@chromium.org>
Reviewed-by: Gauthier Ambard <gambard@chromium.org>
Commit-Queue: Eugene But <eugenebut@chromium.org>
Cr-Commit-Position: refs/heads/master@{#521876}
Former-commit-id: 19825f69ff27c5e99fb0a230ce730d8cc0561830